update render reactives

--- a/src/02-响应式系统/index.html
+++ b/src/02-响应式系统/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./reactive.js"></script>
+  <script src="./03_添加Effect的重构.js"></script>
 </body>
 </html>
